<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="settings_title">Settings</string>
    <string name="settings_category_general">General</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="settings_appearance_theme">Theme</string>
    <string name="settings_category_content">Content</string>
    <string name="settings_content_show_literature">Show literature</string>
    <string name="settings_content_show_mature">Show mature content</string>
    <string name="settings_content_show_mature_summary">%s required</string>
    <string name="settings_category_about">About</string>
    <string name="settings_about">About</string>
    <string name="settings_about_summary">Feedback, Legal, Version</string>

    <string name="settings_appearance_theme_default">Set by Battery Saver</string>
    <string name="settings_appearance_theme_light">Light</string>
    <string name="settings_appearance_theme_dark">Dark</string>

    <string-array name="settings_appearance_theme_names">
        <item>@string/settings_appearance_theme_default</item>
        <item>@string/settings_appearance_theme_light</item>
        <item>@string/settings_appearance_theme_dark</item>
    </string-array>

    <string-array name="settings_appearance_theme_values">
        <item>default</item>
        <item>light</item>
        <item>dark</item>
    </string-array>

    <string name="settings_notifications_title">Notifications</string>
    <string name="settings_notifications_enabled">Enable notifications</string>

    <string name="settings_notifications_category_general">General</string>
    <string name="settings_notifications_favorites">Favorites</string>
    <string name="settings_notifications_favorites_summary">When your deviation is added to favorites</string>
    <string name="settings_notifications_collections">Collections</string>
    <string name="settings_notifications_collections_summary">When your deviation is added to a collection</string>
    <string name="settings_notifications_watch">Watch</string>
    <string name="settings_notifications_watch_summary">When someone starts watching you</string>

    <string name="settings_notifications_category_comments">Comments</string>
    <string name="settings_notifications_comments_deviations">Deviations</string>
    <string name="settings_notifications_comments_deviations_summary">When someone leaves a comment under your deviation</string>
    <string name="settings_notifications_comments_profile">Profile</string>
    <string name="settings_notifications_comments_profile_summary">When someone leaves a comment under your profile</string>
    <string name="settings_notifications_comments_statuses">Statuses</string>
    <string name="settings_notifications_comments_statuses_summary">When someone leaves a comment under your status</string>
    <string name="settings_notifications_comments_replies">Replies</string>
    <string name="settings_notifications_comments_replies_summary">When someone replies to your comment</string>

    <string name="settings_notifications_category_mentions">Mentions</string>
    <string name="settings_notifications_mentions_username">Username</string>
    <string name="settings_notifications_mentions_username_summary">When someone mentions you</string>
    <string name="settings_notifications_mentions_deviations">Deviations</string>
    <string name="settings_notifications_mentions_deviations_summary">When someone mentions one of your deviations</string>

    <string name="about_title">About</string>
    <string name="about_category_feedback">Feedback</string>
    <string name="about_rate_app">Rate in Google Play</string>
    <string name="about_send_feedback">Send feedback</string>
    <string name="about_send_email_title">Send email via</string>
    <string name="about_category_legal">Legal</string>
    <string name="about_licenses">Open Source Licenses</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="about_deviantart_privacy_policy">DeviantArt Privacy Policy</string>
    <string name="about_deviantart_tos">DeviantArt Terms of Service</string>
    <string name="about_category_other">Other</string>
    <string name="about_app_version">Version</string>
    <string name="about_new_version_available">A newer version is available!</string>

    <string name="licenses_title">Open Source Licenses</string>
    <string name="licenses_header">Plastique is built with the help of the following Open Source libraries:</string>

</resources>
