<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory android:title="@string/settings_category_appearance">
        <ListPreference
            android:defaultValue="light"
            android:entries="@array/settings_appearance_theme_names"
            android:entryValues="@array/settings_appearance_theme_values"
            android:key="ui.theme"
            android:title="@string/settings_appearance_theme" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_content">
        <SwitchPreference
            android:defaultValue="true"
            android:key="content.show_literature"
            android:title="@string/settings_content_show_literature" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="content.show_mature"
            android:title="@string/settings_content_show_mature" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_about">
        <PreferenceScreen
            android:key="screen_about"
            android:summary="@string/settings_about_summary"
            android:title="@string/settings_about">
            <PreferenceCategory android:title="@string/about_category_feedback">
                <Preference
                    android:key="rate_app"
                    android:persistent="false"
                    android:title="@string/about_rate_app" />

                <Preference
                    android:key="send_feedback"
                    android:persistent="false"
                    android:title="@string/about_send_feedback" />
            </PreferenceCategory>

            <PreferenceCategory android:title="@string/about_category_legal">
                <Preference
                    android:key="privacy_policy"
                    android:persistent="false"
                    android:title="@string/about_privacy_policy" />

                <Preference
                    android:key="deviantart_privacy_policy"
                    android:persistent="false"
                    android:title="@string/about_deviantart_privacy_policy" />

                <Preference
                    android:key="deviantart_tos"
                    android:persistent="false"
                    android:title="@string/about_deviantart_tos" />

                <Preference
                    android:key="licenses"
                    android:persistent="false"
                    android:title="@string/about_licenses" />
            </PreferenceCategory>

            <PreferenceCategory android:title="@string/about_category_other">
                <Preference
                    android:key="app_version"
                    android:persistent="false"
                    android:title="@string/about_app_version"
                    tools:summary="1.0" />
            </PreferenceCategory>

        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>
